# Red-Courier

./: .env.dist  .gitignore  Dockerfile  bot.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 121611586677_.py  1c73cb159744_auto.py  60c959c73b70_auto.py  b097d1e0cf99_init.py
tgbot/: config.py
tgbot/handlers/: __init__.py  file.py  help.py
tgbot/handlers/admin/: __init__.py  init_chats.py  service.py  status.py
tgbot/misc/: logging.py
tgbot/models/: base.py  chat.py  chat_tg.py  service.py
tgbot/storage/: __init__.py
tgbot/webhook/api/: __init__.py  webhook.py
tgbot/webhook/schemas/: __init__.py  whrequest.py
